Tried to extend the generation of schema-based doc to Saxon and Jaxp processors, beside XsltProc